[vscode] more settings

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -12,7 +12,7 @@
 	"editor.bracketPairColorization.enabled": false,
 	"editor.fontFamily": "JetBrains Mono",
 	"editor.guides.indentation": false,
-	"editor.hover.enabled": false,
+	"editor.hover.delay": 1000,
 	"editor.inlayHints.enabled": "offUnlessPressed",
 	"editor.lineHeight": 1.6,
 	"editor.matchBrackets": "near",
@@ -193,20 +193,32 @@
 			]
 		}
 	},
+	"explorer.confirmDelete": false,
 	"files.autoSave": "afterDelay",
+	"files.exclude": {
+		"target/**": true
+	},
+	"files.watcherExclude": {
+		"target/**": true
+	},
+	"git.confirmSync": false,
 	"git.enableSmartCommit": true,
 	"githubPullRequests.pullBranch": "never",
 	"gitlens.codeLens.enabled": false,
 	"gitlens.currentLine.enabled": false,
+	"rust-analyzer.cargo.allTargets": false,
 	"rust-analyzer.check.allTargets": false,
+	"rust-analyzer.check.workspace": false,
 	"rust-analyzer.checkOnSave": false,
 	"rust-analyzer.lens.implementations.enable": false,
 	"rust-analyzer.semanticHighlighting.operator.enable": false,
 	"search.showLineNumbers": true,
 	"security.promptForLocalFileProtocolHandling": false,
+	"security.workspace.trust.untrustedFiles": "open",
 	"window.menuBarVisibility": "hidden",
 	"window.newWindowDimensions": "fullscreen",
 	"window.restoreFullscreen": true,
+	"workbench.activityBar.location": "top",
 	"workbench.colorCustomizations": {
 		"[Monokai]": {
 			"statusBarItem.remoteBackground": "#414339"
