[vscode] more settings

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -203,6 +203,7 @@
 	},
 	"git.confirmSync": false,
 	"git.enableSmartCommit": true,
+	"github.copilot.editor.enableAutoCompletions": false,
 	"githubPullRequests.pullBranch": "never",
 	"gitlens.codeLens.enabled": false,
 	"gitlens.currentLine.enabled": false,
@@ -211,6 +212,7 @@
 	"rust-analyzer.check.workspace": false,
 	"rust-analyzer.checkOnSave": false,
 	"rust-analyzer.lens.implementations.enable": false,
+	"rust-analyzer.runnables.askBeforeUpdateTest": false,
 	"rust-analyzer.semanticHighlighting.operator.enable": false,
 	"search.showLineNumbers": true,
 	"security.promptForLocalFileProtocolHandling": false,
